# SUI

./: CMakeLists.txt  README.md
include/: draw.hpp  sfml_aliases.hpp  sui_func.hpp  window.hpp
src/: draw.cpp  main.cpp  sui_func.cpp  window.cpp
